vlib/v/checker/tests/cast_void.out
vlib/v/checker/tests/cast_void.vv:1:12: error: expression does not return a value so it cannot be casted
    1 | num := int(print(''))
      |            ~~~~~~~~~
    2 | println(num)
