vlib/v/checker/tests/cast_void.vv
num := int(print(''))
println(num)
